# ZoneIn-Backend

./: .env.example  .env.production  .gitignore  DEPLOY.md  QUICK_START_PRODUCTION.md  README.md  README_PRODUCTION.md  backfill_max_zone_in_score.py  backfill_usernames.py  delete_all_reports.py  pyproject.toml  requirements.txt  run.py  seed_production.py  setup_production.sh  setup_production_quick.sh  systemd_service.example  verify_max_scores.py
alembic/: env.py
alembic/versions/: add_max_zone_in_score_to_users.py  add_published_and_reactions.py  add_snoozed_sec.py  add_username_to_users.py  c1f879088330_init_users_and_session_reports.py
app/: __init__.py  main.py
app/api/: auth.py  health.py  leaderboard.py  me.py  reports.py
app/core/: auth.py  config.py  database.py
app/models/: __init__.py  reaction.py  session_report.py  user.py
app/services/: google_oauth.py  oauth_state.py  username.py
tests/: conftest.py  test_auth.py  test_health.py  test_reports.py
